add new features babylon loaders and inspector

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@babylonjs/core": "^6.21.0",
+    "@babylonjs/inspector": "^6.21.1",
+    "@babylonjs/loaders": "^6.21.1",
     "vite": "^4.4.5"
   }
 }
